2019-10-25  Jiufu Guo  <guojiufu@linux.ibm.com>	    

	PR tree-optimization/88760
	* config/rs6000/rs6000-common.c (rs6000_option_optimization_table):
	Enable -funroll-loops for -O2 and above.
	* config/rs6000/rs6000.c (rs6000_option_override_internal): Set
	PARAM_MAX_UNROLL_TIMES to 2 and PARAM_MAX_UNROLLED_INSNS to 20, and
	do not turn on web and rngreg implicitly, if the unroller is not
	explicitly enabled.

2019-10-27  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-prop.c (ipa_propagate_indirect_call_infos): Do not remove
	jump functions.

2019-10-27  Eric Botcazou <ebotcazou@adacore.com>

	* cgraph.c (cgraph_node::rtl_info): Fix cut&pasto in comment.
	* cgraph.h (cgraph_node::rtl_info): Likewise.

2019-10-27  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (propagate_constants_across_call): If args are not available
	just drop everything to varying.
	(find_aggregate_values_for_callers_subset): Watch for missing
	edge summary.
	(find_more_scalar_values_for_callers_subs): Likewise.
	* ipa-prop.c (ipa_compute_jump_functions_for_edge,
	update_jump_functions_after_inlining, propagate_controlled_uses):
	Watch for missing summaries.
	(ipa_propagate_indirect_call_infos): Remove summary after propagation
	is finished.
	(ipa_write_node_info): Watch for missing summaries.
	(ipa_read_edge_info): Create new ref.
	(ipa_edge_args_sum_t): Add remove.
	(IPA_EDGE_REF_GET_CREATE): New macro.
	* ipa-fnsummary.c (evaluate_properties_for_edge): Watch for missing
	edge summary.
	(remap_edge_change_prob): Likewise.

2019-10-27  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-inline-transform.c (inline_call): update function summaries
	after expanidng thunk.

2019-10-27  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-icf.c (sem_function::merge): Update function summaries.
	* ipa-prop.h (ipa_get_param): Do not sanity check for WPA.

2019-10-27  Hongtao Liu  <hongtao.liu@intel.com>

	* config/i386/sse.md (*<sse>_vm<plusminus_insn><mode>3,
	<sse>_vm<multdiv_mnemonic><mode>3): Remove <iptr> since